--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "repository": "#",
   "license": "UNLICENSED",
   "scripts": {
-    "build": "webpack --config ./bundler/webpack.prod.js",
+    "build": "webpack --config ./bundler/webpack.prod.js --output public",
     "dev": "webpack serve --config ./bundler/webpack.dev.js"
   },
   "dependencies": {
